// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Should display an error if banner deletion fails 1`] = `
<div>
  <div
    class="tlp-alert-danger"
  >
    An error occurred: an error message
  </div>
  <div>
    <banner-presenter-stub
      loading="false"
      message="some message"
    />
  </div>
</div>
`;

exports[`App Should display an error if banner update fails 1`] = `
<div>
  <div
    class="tlp-alert-danger"
  >
    An error occurred: Ooops something went wrong
  </div>
  <div>
    <banner-presenter-stub
      loading="false"
      message="some message"
    />
  </div>
</div>
`;

exports[`App displays message and remove button when banner is not empty 1`] = `
<div>
  <!--v-if-->
  <div>
    <banner-presenter-stub
      loading="false"
      message=<b>My banner content</b>
    />
  </div>
</div>
`;

exports[`App displays something when no banner is set 1`] = `
<div>
  <!--v-if-->
  <div>
    <banner-presenter-stub
      loading="false"
      message=""
    />
  </div>
</div>
`;

exports[`App displays success message when the banner has been successfully modified 1`] = `
<div>
  <div
    class="tlp-alert-success"
  >
    The banner has been successfully modified
  </div>
  <div>
    <banner-presenter-stub
      loading="false"
      message=""
    />
  </div>
</div>
`;
